--- a/Flaintartist/Base.lproj/Main.storyboard
+++ b/Flaintartist/Base.lproj/Main.storyboard
@@ -63,7 +63,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" alpha="0.69999998807907104" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wwt-Ez-Rsr" customClass="RoundedBtn" customModule="Flaintartist" customModuleProvider="target">
-                                <rect key="frame" x="36" y="261" width="309" height="45"/>
+                                <rect key="frame" x="36" y="253" width="309" height="45"/>
                                 <color key="backgroundColor" red="0.19215686274509802" green="0.50980392156862742" blue="0.85098039215686272" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="SHy-Jv-GRB"/>
@@ -77,10 +77,10 @@
                                 </connections>
                             </button>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="bgZ-yu-rxo">
-                                <rect key="frame" x="180" y="274" width="20" height="20"/>
+                                <rect key="frame" x="180" y="266" width="20" height="20"/>
                             </activityIndicatorView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="ggA-fv-xBB">
-                                <rect key="frame" x="24" y="121" width="328" height="113"/>
+                                <rect key="frame" x="24" y="113" width="328" height="113"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="41I-9u-Rmv">
                                         <rect key="frame" x="0.0" y="0.0" width="328" height="46"/>
@@ -130,7 +130,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d49-Xv-XY9">
-                                <rect key="frame" x="81" y="314" width="219" height="27"/>
+                                <rect key="frame" x="81" y="306" width="219" height="27"/>
                                 <state key="normal">
                                     <attributedString key="attributedTitle">
                                         <fragment content="Forgot your Login Details? ">
@@ -158,7 +158,7 @@
                         <constraints>
                             <constraint firstItem="ggA-fv-xBB" firstAttribute="leading" secondItem="j7Q-na-Ykq" secondAttribute="leadingMargin" constant="8" id="1WX-GM-jmg"/>
                             <constraint firstItem="Wwt-Ez-Rsr" firstAttribute="centerX" secondItem="d49-Xv-XY9" secondAttribute="centerX" id="7Ai-Ks-rQz"/>
-                            <constraint firstItem="ggA-fv-xBB" firstAttribute="top" secondItem="saF-aw-Dvr" secondAttribute="bottom" constant="57" id="9GV-xq-FbM"/>
+                            <constraint firstItem="ggA-fv-xBB" firstAttribute="top" secondItem="saF-aw-Dvr" secondAttribute="bottom" constant="49" id="9GV-xq-FbM"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Wwt-Ez-Rsr" secondAttribute="trailing" constant="14" id="HQg-n9-Avs"/>
                             <constraint firstItem="Wwt-Ez-Rsr" firstAttribute="leading" secondItem="j7Q-na-Ykq" secondAttribute="leadingMargin" constant="20" id="IPk-fz-MiH"/>
                             <constraint firstItem="d49-Xv-XY9" firstAttribute="top" secondItem="Wwt-Ez-Rsr" secondAttribute="bottom" constant="8" symbolic="YES" id="IcC-ET-o7s"/>
@@ -1857,6 +1857,7 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="lfd-Lc-3pd">
                                 <rect key="frame" x="0.0" y="20" width="375" height="650"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <inset key="scrollIndicatorInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="10"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="50" minimumInteritemSpacing="50" id="VeU-bv-uJW">
                                     <size key="itemSize" width="180" height="180"/>
                                     <size key="headerReferenceSize" width="50" height="50"/>
