--- a/Flaintartist/Base.lproj/Main.storyboard
+++ b/Flaintartist/Base.lproj/Main.storyboard
@@ -1855,18 +1855,18 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="lfd-Lc-3pd">
-                                <rect key="frame" x="0.0" y="20" width="375" height="650"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="670"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <inset key="scrollIndicatorInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="10"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="50" minimumInteritemSpacing="50" id="VeU-bv-uJW">
-                                    <size key="itemSize" width="180" height="180"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="VeU-bv-uJW">
+                                    <size key="itemSize" width="167" height="167"/>
                                     <size key="headerReferenceSize" width="50" height="50"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="5" minY="0.0" maxX="5" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="50"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="NewCell" id="oTa-fk-apC" customClass="NewCell" customModule="Flaintartist" customModuleProvider="target">
-                                        <rect key="frame" x="5" y="50" width="180" height="180"/>
+                                        <rect key="frame" x="0.0" y="50" width="180" height="180"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
@@ -1881,13 +1881,13 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="artist" translatesAutoresizingMaskIntoConstraints="NO" id="NGc-VF-cQZ" customClass="RoundImage" customModule="Flaintartist" customModuleProvider="target">
-                                                            <rect key="frame" x="5" y="153" width="22" height="22"/>
+                                                            <rect key="frame" x="5" y="151" width="22" height="22"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="22" id="gvk-4K-zq7"/>
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Solange" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xFm-Dp-0G6">
-                                                            <rect key="frame" x="29" y="156" width="132" height="8"/>
+                                                            <rect key="frame" x="29" y="154" width="132" height="8"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="8" id="RyA-FN-fgt"/>
                                                             </constraints>
@@ -1896,7 +1896,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4 WEEK AGO" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h9b-os-sal">
-                                                            <rect key="frame" x="30" y="166" width="132" height="6"/>
+                                                            <rect key="frame" x="30" y="164" width="132" height="6"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="6" id="32F-9W-qud"/>
                                                             </constraints>
@@ -1907,8 +1907,8 @@
                                                     </subviews>
                                                     <color key="backgroundColor" red="0.18998533487319946" green="0.35768887400627136" blue="0.43821841478347778" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="bottom" secondItem="NGc-VF-cQZ" secondAttribute="bottom" constant="5" id="FFy-GT-Ll4"/>
-                                                        <constraint firstItem="h9b-os-sal" firstAttribute="bottom" secondItem="Mcx-WE-qLo" secondAttribute="bottomMargin" id="Ke1-qM-oLd"/>
+                                                        <constraint firstAttribute="bottom" secondItem="NGc-VF-cQZ" secondAttribute="bottom" constant="7" id="FFy-GT-Ll4"/>
+                                                        <constraint firstItem="h9b-os-sal" firstAttribute="bottom" secondItem="Mcx-WE-qLo" secondAttribute="bottomMargin" constant="-2" id="Ke1-qM-oLd"/>
                                                         <constraint firstItem="xFm-Dp-0G6" firstAttribute="leading" secondItem="h9b-os-sal" secondAttribute="leading" constant="-1" id="Mps-24-c5m"/>
                                                         <constraint firstAttribute="trailing" secondItem="h9b-os-sal" secondAttribute="trailing" constant="18" id="QCX-Q7-MUE"/>
                                                         <constraint firstItem="xFm-Dp-0G6" firstAttribute="leading" secondItem="NGc-VF-cQZ" secondAttribute="trailing" constant="2" id="WkZ-gh-Hk8"/>
@@ -1936,13 +1936,13 @@
                                         </connections>
                                     </collectionViewCell>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="NewArtistCell" id="qMp-JN-Dec" customClass="NewArtistCell" customModule="Flaintartist" customModuleProvider="target">
-                                        <rect key="frame" x="235" y="90" width="100" height="100"/>
+                                        <rect key="frame" x="180" y="90" width="100" height="100"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="artist" translatesAutoresizingMaskIntoConstraints="NO" id="oc7-tB-7mT" customClass="RoundImage" customModule="Flaintartist" customModuleProvider="target">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="oc7-tB-7mT" customClass="RoundImage" customModule="Flaintartist" customModuleProvider="target">
                                                     <rect key="frame" x="21" y="0.0" width="60" height="60"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="60" id="9g4-y3-esL"/>
@@ -2001,7 +2001,7 @@
                             <constraint firstAttribute="trailing" secondItem="lfd-Lc-3pd" secondAttribute="trailing" id="R1u-iY-drg"/>
                             <constraint firstAttribute="bottom" secondItem="lfd-Lc-3pd" secondAttribute="bottom" id="YBw-c7-XVb"/>
                             <constraint firstItem="lfd-Lc-3pd" firstAttribute="leading" secondItem="Ntf-Mr-Zqy" secondAttribute="leading" id="eQb-ha-2b6"/>
-                            <constraint firstItem="lfd-Lc-3pd" firstAttribute="top" secondItem="Ntf-Mr-Zqy" secondAttribute="top" constant="20" id="hx7-P9-ATy"/>
+                            <constraint firstItem="lfd-Lc-3pd" firstAttribute="top" secondItem="Ntf-Mr-Zqy" secondAttribute="top" id="hx7-P9-ATy"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="iFL-jv-ZKk">
